<resources>
    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationales">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permissions were denied, but are needed for core
        functionalities.</string>
    <string name="settings">Settings</string>

    <string name="action_addmember">Add member</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_editcollab">Edit Collaboration</string>
    <string name="action_editmodule">Edit Module</string>
    <string name="action_editnote">Edit Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Collabora</string>
    <string name="title_activity_all_notes">AllNotes</string>
    <string name="title_activity_add_note">AddNoteActivity</string>

    <!-- Create collaboration fragment -->
    <string name="collabfrag_title">New Collaboration</string>
    <string name="collabfrag_lblname">Insert collaboration name</string>
    <string name="collabfrag_lbltype">Type</string>
    <string-array name="collabfrag_spinnertype">
        <item>Group</item>
        <item>Project</item>
    </string-array>
    <string name="dialog_createcollab">Create</string>
    <string name="dialog_cancelcollab">Cancel</string>

    <!-- Main Activity -->
    <string name="collaborations_drawer">COLLABORATIONS</string>
    <string name="personal_drawer">PERSONAL LIST</string>
    <string name="personal_list">My List</string>
    <string name="groups_drawer">GROUPS</string>
    <string name="project_drawer">PROJECTS</string>

    <!-- Collaboration Fragment -->
    <string name="title_noteslist">Notes</string>
    <string name="title_modulelist">Module</string>

    <!-- Create Note Fragment -->
    <string name="newnote_title">Create a new note</string>
    <string name="set_state">Set state</string>
    <string name="insert_content">Insert content</string>
    <string name="newnote_date">Date Expiration</string>
    <string name="newnote_time">Time Expiration</string>
    <string name="newnote_location">Search a location for your note</string>

    <!--Create Module Fragment -->
    <string name="newmodule_title">Create a new module</string>

    <!-- Radio Group Note State -->
    <string name="rg_todo">To-do</string>
    <string name="rg_doing">Doing</string>
    <string name="rg_done">Done</string>
    <string name="rg_project">PROJECT</string>
    <string name="rg_group">GROUP</string>

    <!-- Note Fragment -->
    <string name="note_state">State</string>
    <string name="note_responsible">Responsible</string>
    <string name="note_expirationdate">Expiration Date</string>
    <string name="note_location">Location</string>

    <!-- Edit collaboration fragment -->
    <string name="collabInfo_title">Collaboration</string>
    <string name="collabInfo_name_lbl">Name</string>
    <string name="collabInfo_member_lbl">Members</string>
    <string name="collabInfo_member_btn">Add member</string>
    <string name="memberfrag_lblname">Username</string>
    <string name="memeberfrag_lblright">Access right</string>

    <!-- Edit note fragment -->
    <string name="editnote_title">Edit Note</string>
    <string name="insert_new_content">Insert new content</string>
    <string name="editnote_location">Search new location</string>
    <string name="change_state">Change state</string>
    <string name="editnote_dateexpiration">Expiration Date</string>
    <string name="editnote_timeexpiration">Expiration Time</string>

    <!-- Edit Module Fragment -->
    <string name="editmodule_title">Edit Module</string>

    <!-- Error message -->
    <string name="fieldempty">Field Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and registration -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_birth">Birth Date</string>

    <string name="action_goto_register">or create a new Account</string>
    <string name="register_title">Create a new Collabora Account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dateStr">--/--/----</string>
    <string name="or_back_to_login">or back to Login</string>
    <string name="action_logout">LOGOUT</string>
    <string name="welcome_to_collabora">Welcome to Collabora</string>
    <string name="press_the_side_menu_to_manage_your_collaborations">press the side menu to manage your collaborations</string>
    <string name="add_previous_notes">Add previous Notes</string>
    <string name="previous_notes">Previous notes</string>
    <string name="add_previous_note">add previous note</string>
    <string name="nonoteinserted">No previous notes inserted</string>
    <string name="manage_notes">Manage notes</string>
    <string name="set_previous_modules">Set previous Modules</string>
    <string name="prevmod">Previous Modules</string>
    <string name="change_previous_modules">change previous modules</string>
    <string name="modulefragment">moduleFragment</string>
    <string name="error_todo">Error: in the previous notes list there are notes with To Do state, modify current state in To Do or edit list!</string>
    <string name="error_done">Error: selected state Done not compliant with previous notes list (with Done state, all list\'s note should has Done in state!</string>

    <!-- Strings related to server errors -->
    <string name="server_error">Server error!</string>
    <string name="member_not_found">Member not found!</string>
    <string name="swipe_right_to_manage_your_collaborations">Swipe right to manage your collaborations</string>
</resources>
