<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.gammf.collabora_android.app.gui.collaboration.CollaborationInfoFragment">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/collabInfo_member_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignTop="@+id/imageView10"
        android:layout_toEndOf="@+id/imageView10"
        android:layout_alignBottom="@+id/imageView10"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_alignTop="@+id/imageView9"
        android:layout_toEndOf="@+id/imageView9"
        android:gravity="center_vertical"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/collabfrag_lbltype"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/lblTitleEditedCollab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:text="@string/collabInfo_title"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lblCollaborationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView8"
        android:layout_alignTop="@+id/imageView8"
        android:layout_toEndOf="@+id/imageView8"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="@string/collabInfo_name_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/txtCollaborationName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_below="@+id/imageView8"
        android:layout_alignStart="@+id/imageView8"
        android:layout_alignEnd="@+id/lblTitleEditedCollab"
        />

    <ImageButton
        android:id="@+id/btnEditCollaboration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_black"
        android:layout_alignEnd="@+id/lblTitleEditedCollab"
        android:layout_below="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/note_icon"
        android:layout_below="@+id/lblTitleEditedCollab"
        android:layout_alignStart="@+id/lblTitleEditedCollab"/>

    <TextView
        android:id="@+id/txtCollabType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignTop="@+id/textView14"
        android:layout_toEndOf="@+id/textView14"
        android:gravity="center_vertical"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="@string/collabfrag_lbltype"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"/>
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/typecollabicon"
        android:layout_below="@+id/txtCollaborationName"
        android:layout_alignStart="@+id/txtCollaborationName"
        android:layout_marginTop="17dp"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/collabmembericon"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/imageView9"/>
    
    <ListView
        android:id="@+id/listViewCollabMember"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/lblTitleEditedCollab"
        android:layout_alignStart="@+id/imageView10"
        android:layout_below="@+id/textView15"
        android:layout_margin="5dp"/>

    <ImageButton
        android:id="@+id/btnAddMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_above="@+id/listViewCollabMember"
        android:layout_alignEnd="@+id/listViewCollabMember"
        android:background="@drawable/add"
        android:layout_below="@+id/textView13"/>
    
</RelativeLayout>
